# huggingface_stt_gui

./: README.md  Taskfile.yml  app.py  compose.yml  pyproject.toml
templates/: index.html
