[project]
name = "huggingface-stt-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "eventlet>=0.40.0",
    "flask>=3.1.1",
    "redis>=6.2.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "transformers>=4.52.4",
]
